@@ -530,6 +530,7 @@
 	- handle dirname == NULL in parse_directory() and clear_directory()
 	- enabled "Smaller Type Check" in Visual Studio projects
 	- added command_to_argv() to common.c
+	- try to rename the output folder until it succeeded
 	
 	create_report
 	- added a summary at the end when "dokuwiki_format" is set
